8-ingress/nginx-ingress-external-this-is-optional.yaml
# Copyright 2022 Google LLC
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle-ingress
  namespace: moodle
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Forwarded-For $http_x_forwarded_for";
      more_set_headers "X-Forwarded-Proto https";
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - maktab.ghasi.ca
    secretName: tls-secret
  rules:
  - host: maktab.ghasi.ca
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: moodle
              port:
                number: 80
